--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
               <li class="nav-item">
                   <a href="activity.html" class="nav-link" target="_blank">Activities</a>
               </li>
+              <li class="nav-item">
+                  <a href=href="explore.html" class="nav-link" target="_blank">Explore</a>
+              </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="explore.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Explore
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="dobonggu.html">Dobong-gu</a></li>
