--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <a href="activity.html" class="nav-link" target="_blank">Activities</a>
               </li>
               <li class="nav-item">
-                  <a href=href="explore.html" class="nav-link" target="_blank">Explore</a>
+                  <a href="explore.html" class="nav-link" target="_blank">Explore</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
