--- a/guidelines.html
+++ b/guidelines.html
@@ -60,9 +60,11 @@
               <li class="nav-item">
                   <a href="activity.html" class="nav-link" target="_blank">Activities</a>
               </li>
+               <li class="nav-item">
+                <a href="explore.html" class="nav-link" target="_blank">Explore</a>
+            </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="explore.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Explore
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="dobonggu.html">Dobong-gu</a></li>
@@ -70,12 +72,7 @@
                 </ul>
               </li>
           </ul>
-
-          <form class="d-flex ms-auto"><!--ms auto pushes the element to the left (spacing)-->
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn" type="submit">Search</button>
-          </form>
-      
+        
       </div>
   </div> 
 </nav>
