--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,9 @@
                 <li class="nav-item">
                 <a href="explore.html" class="nav-link" target="_blank">Explore</a>
                 </li>
+            <li class="nav-item">
+                <a href="explore.html" class="nav-link" target="_blank">Explore</a>
+            </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="explore.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 </a>
