--- a/bookings.html
+++ b/bookings.html
@@ -162,7 +162,7 @@
   
             <legend><h3>Booking Details</h3></legend>
             <div class="row">
-            <div class="col-md-3"><label for="clocation">From:</label><br>
+            <div class="col-md-3"><label for="clocation">From:<span style="color:red">*</span></label><br>
             <select id="clocation" name="clocation" required>
               <option value="Delhi">Delhi</option>
               <option value="Tokyo">Tokyo</option>
@@ -171,7 +171,7 @@
               <option value="Moscow">Moscow</option>
             </select>
             </div>
-            <div class="col-md-3"><label for="dlocation">To:</label><br>
+            <div class="col-md-3"><label for="dlocation">To:<span style="color:red">*</span></label><br>
             <select id="dlocation" name="dlocation" required>
               <option value="Seoul">Seoul</option>
             </select>
