--- a/bookings.html
+++ b/bookings.html
@@ -219,6 +219,7 @@
             </div>
         </div>
         </fieldset>
+        <span style="color:red">*</span>This means required
         </div>
       </form>
 
