--- a/guidelines.html
+++ b/guidelines.html
@@ -36,6 +36,16 @@
       border-radius: 5px;
       background-color: rgb(255, 248, 226);
     }
+    
+        @media  screen and (max-width: 600px) {
+      .covimg{
+       max-width: 80%;
+      }}
+
+      @media  screen and (max-width: 900px) {
+      .covimg{
+       max-width: 80%;
+    }}
   </style>
 
   
