--- a/explore.html
+++ b/explore.html
@@ -107,7 +107,7 @@
 <body>
 
 <div class="p-5 container-1"><!--for the text and items on the bg-->
-  <span><img src="logo2.svg" alt="yeohaeng travel seoul"></a></span>
+  <span><img src="logo2.png" class="logo" alt="yeohaeng travel seoul"></a></span>
   <div align="center" >
 		<h1 style="color:antiquewhite; font-family:Karla;"> Welcome To Yeohaeng Seoul </h1>
 		<h6>Click on a district to visit</h6>
