--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 <!--Navbar-->
 <nav class="navbar sticky-top fixed-top navbar-expand-lg">
   <div class="container">
-      <a href="index.html" class="navbar-brand"><img src="logo2.svg" alt="yeohaeng travel seoul"></a>
+      <a href="index.html" class="navbar-brand"><img src="logo2.png" class="logo" alt="yeohaeng travel seoul"></a>
 
       <button class="navbar-toggler" type="button" 
       data-bs-toggle="collapse" data-bs-target="#navmenu">
