--- a/contact.html
+++ b/contact.html
@@ -222,7 +222,7 @@
        </div>
        <div class="col">
          <div>
-          <a href="index.html"><img src="logo2.svg" alt="yeohaeng travel seoul" class="justify-content-start" style="width:100%;"></a>
+          <a href="index.html"><img src="logo2.png" class="logo" alt="yeohaeng travel seoul" class="justify-content-start" style="width:100%;"></a>
           <p class="text-start" style="margin-top: 5%;">
             Your friendly Seoul travel site.
           </p>
