--- a/bookings.html
+++ b/bookings.html
@@ -56,7 +56,7 @@
 <!--Navbar-->
 <nav class="navbar sticky-top fixed-top navbar-expand-lg">
   <div class="container">
-      <a href="index.html" class="navbar-brand"><img src="logo2.svg" alt="yeohaeng travel seoul"></a>
+      <a href="index.html" class="navbar-brand"><img src="logo2.png" class="logo" alt="yeohaeng travel seoul"></a>
 
       <button class="navbar-toggler" type="button" 
       data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -326,7 +326,7 @@
          </div>
          <div class="col">
            <div>
-            <a href="index.html"><img src="logo2.svg" alt="yeohaeng travel seoul" class="justify-content-start" style="width:100%;"></a>
+            <a href="index.html"><img src="logo2.png" class="logo" alt="yeohaeng travel seoul" class="justify-content-start" style="width:100%;"></a>
             <p class="text-start" style="margin-top: 5%;">
               Your friendly Seoul travel site.
             </p>
