--- a/guidelines.html
+++ b/guidelines.html
@@ -37,15 +37,6 @@
       background-color: rgb(255, 248, 226);
     }
     
-        @media  screen and (max-width: 600px) {
-      .covimg{
-       max-width: 80%;
-      }}
-
-      @media  screen and (max-width: 900px) {
-      .covimg{
-       max-width: 80%;
-    }}
   </style>
 
   
@@ -102,7 +93,7 @@
       <ul class="covbg">
           <ul>
            <li><h4><b>Prior to Boarding</b></h4>
-            <img src="g1.png" class="m-3">
+            <img src="g1.png" class="m-3 covimg">
             <div class="toggle-1">
             <ul style="list-style-type: disc;">
               <li><h5>
@@ -126,7 +117,7 @@
           
 
            <li class="pt-5"><h4><b>Upon Arrival in South Korea</b></h4>
-            <img src="g2.png" class="m-3">
+            <img src="g2.png" class="m-3 covimg">
             <div class="toggle-2">
             <ul style="list-style-type: disc;">
               <li><h5>
